@startuml no_inheritence

'
' SETTINGS
'

hide circle

skinparam DefaultFontName  monospaced
skinparam DefaultFontSize          16
skinparam DefaultFontStyle      plain

'
' ENTITIES
'

entity "LessonPayment" as lessonPayment
{
	skillLevel
	lessonType
	timeOfLesson
	siblingDiscount
	cost
}

entity "Individual" as lessonIndividual
{
	skillLevel

	instrumentFocus
}

entity "Group" as lessonGroup
{
	skillLevel

	numberOfPlacesMinimum
	numberOfPlacesMaximum

	instrumentFocus
}

entity "Ensemble" as lessonEnsemble
{
	skillLevel

	numberOfPlacesMinimum
	numberOfPlacesMaximum

	genre
}

entity "Appointment" as appointment
{
	studentId
	instructorId
	startTime
	duration
}

entity "TimeSlot" as timeSlot
{
	startTime
	duration
}

entity "Address" as address
{
	city
	zipCode
	street
}

entity "ContactDetails" as contact
{
	email
	phoneNumber
}

entity "Student" as student
{
	personNumber UNIQUE
	firstName
	lastName

	studentId      UNIQUE
	siblings         0..*
	contactPersons   0..*
}

entity "Instructor" as instructor
{
	personNumber UNIQUE
	firstName
	lastName

	instructorId              UNIQUE
	instrumentsProficientWith   1..*
}

entity "InstrumentStock" as instrumentStock
{
	modelId        UNIQUE
	instrumentType
	brand
	quantity
}

entity "Instrument" as instrument
{
	instrumentId UNIQUE
	modelId
}

entity "Rental" as rental
{
	rentalId     UNIQUE
	instrumentId UNIQUE
	timeOfRental
	leaseMonths
}

entity "RentalPayment" as rentalPayment
{
	rentalId
	cost
}

'
' RELATIONS
'

student "1" - "1" address : lives at >

address "1" - "1" instructor : lives at <

contact "1" --- "1" student : used to contact >

contact "1" --- "1" instructor : used to contact >

lessonPayment "0..*" -- "1" student : pays <

lessonPayment "0..*" -- "1" instructor : receives <

student "1" --- "0..*" lessonIndividual : attends >

student "1" --- "0..*" lessonGroup : attends >

student "1" --- "0..*" lessonEnsemble : attends >

instructor "1" --- "0..*" lessonIndividual : holds >

instructor "1" --- "0..*" lessonGroup : holds >

instructor "1" --- "0..*" lessonEnsemble : holds >

rental "0..2" - "1" student : rents <

rental "1" -- "1" instrument : concerns >

instrument "0..*" -- "1" instrumentStock : keeps track of <

rentalPayment "0..2" -- "1" student : pays <

lessonIndividual "1" -- "1" appointment : schedules <

lessonGroup "1" -- "1" timeSlot : schedules <

lessonEnsemble "1" -- "1" timeSlot : schedules <

'
' NOTES
'

note as N1
	Attributes have a cardinality of 1 unless specified otherwise,
	they also and do not have to be unique.

	The different skill levels:
	- Beginner
	- Intermediate
	- Advanced
end note

note right of lessonPayment
	Sibling discount
	does not affect
	payment of the
	instructor.
end note

note left of rentalPayment
	**rentalId** will not have to be unique
	to account for cases where a student
	misses to pay for an instrument
	multiple months in a row.
end note

note bottom of student
	Contact persons are stored as their person number.
	With that you can retrieve their information.
end note

@enduml
